Update 6.2 Conduct security controls testing.md

--- a/DOMAIN6: Security Assessment and Testing/6.2 Conduct security controls testing.md
+++ b/DOMAIN6: Security Assessment and Testing/6.2 Conduct security controls testing.md
@@ -201,3 +201,163 @@ The Gaining Access phase tests whether the identified vulnerabilities can be exp
 ---
 
 ## 6.2.3 Log Reviews ##
+
+A **log review** is the process of systematically examining log files to identify abnormal patterns, unauthorized actions, misconfigurations, or security incidents. Since logs record nearly every important event in a digital environment, they often provide the earliest indicators of compromise or technical failure.
+
+Regular log reviews allow organizations to spot signs of trouble such as repeated failed logins, privilege escalation, system crashes, unexpected software installations, network anomalies, and other signs of compromise. Log reviews can be manual — where a security analyst inspects logs directly — or automated using specialized tools. Reviewing logs is a fundamental task for security and compliance, and is required by many standards such as ISO 27001, PCI-DSS, HIPAA, and NIST frameworks.
+
+A **Security Information and Event Management (SIEM)** system is a platform designed to automatically collect, store, analyze, and correlate log data from multiple systems in real time. SIEM systems help detect security incidents much faster than manual log review, and they often trigger automated alerts if suspicious patterns are identified.
+
+SIEMs aggregate logs from servers, firewalls, routers, IDS/IPS devices, cloud services, and endpoint security tools, then normalize the data into a consistent format. Once the data is centralized, the SIEM engine applies correlation rules, machine learning, or threat intelligence feeds to identify events that require immediate attention.
+
+:bulb: Popular SIEM systems like Splunk, IBM QRadar, ArcSight, and Microsoft Sentinel allow security teams to automate detection, generate security dashboards, and assist with forensic analysis after incidents. SIEM platforms also play an essential role in compliance, helping produce audit-ready reports that demonstrate security event monitoring is active and effective.
+
+**NetFlow** is a network protocol developed by Cisco that collects and records information about IP traffic flows traversing network interfaces. Unlike simple log files, which record discrete events, NetFlow data summarizes entire conversations between network endpoints. This makes it ideal for network visibility, capacity planning, anomaly detection, and forensic analysis.
+
+NetFlow records include details like source IP, destination IP, source port, destination port, protocol type, packet count, byte count, and timestamps for flow start and end. This allows security teams to answer critical questions such as:
+- Who is communicating with whom?
+- When did the communication happen?
+- How much data was transferred?
+- Which protocols and ports were used?
+
+When integrated with SIEM systems or log management platforms, NetFlow enhances situational awareness and helps detect threats like data exfiltration, port scanning, or lateral movement inside a compromised network.
+
+**Log management** refers to the full lifecycle of log data: generation, collection, centralization, storage, analysis, retention, and secure disposal. Without proper log management, even the most advanced security tools will fail to deliver meaningful results because the raw data will be incomplete, inconsistent, or missing altogether.
+
+A strong log management strategy includes:
+- Defining which devices and systems must send logs.
+- Securing log transmission (using encrypted channels).
+- Centralizing logs in a secure repository.
+- Structuring retention policies (how long logs must be kept).
+- Implementing access control on log files.
+- Regularly reviewing logs for anomalies.
+- Automating alerting and analysis when possible.
+
+:bulb: Modern log management systems like ELK Stack (Elasticsearch, Logstash, Kibana), Graylog, and cloud-native solutions like AWS CloudWatch or Azure Monitor help scale log collection and analysis, even for large or distributed systems.
+
+### Open Questions ###
+
+1. What is the primary goal of performing a log review in an organization?
+
+<details> <summary>Show answer</summary> The primary goal of a log review is to systematically examine log files to detect abnormal patterns, unauthorized actions, misconfigurations, or security incidents early, before they escalate into larger problems. </details>
+
+2. How does a SIEM system improve the efficiency of security monitoring compared to manual log reviews?
+
+<details> <summary>Show answer</summary> A SIEM system improves security monitoring by automatically collecting, normalizing, analyzing, and correlating logs from multiple sources in real time, helping to detect incidents faster and triggering alerts when suspicious patterns are identified. </details>
+
+3. What kind of network information does NetFlow provide that traditional log files might not capture?
+
+<details> <summary>Show answer</summary> NetFlow provides detailed information about network traffic flows, including source and destination IP addresses, ports, protocols, data volume, and timestamps — helping security teams understand communication patterns, detect anomalies, and perform network forensics. </details>
+
+4. Why is log management considered essential for both security monitoring and compliance?
+
+<details> <summary>Show answer</summary> Log management ensures that log data is consistently collected, securely stored, properly retained, and regularly analyzed, which is critical for detecting security incidents, troubleshooting issues, and meeting compliance requirements such as ISO 27001, PCI-DSS, HIPAA, and NIST. </details>
+
+5. List at least three best practices that should be included in a strong log management strategy.
+
+<details> <summary>Show answer</summary> Best practices in log management include: securing log transmission, centralizing logs in a secure repository, applying retention policies, enforcing access controls on logs, and using automation for log review and anomaly detection. </details>
+
+---
+
+## 6.2.4 Synthetic transactions/benchmarks ##
+
+A synthetic transaction is a testing technique used to check if a system, website, or application is working properly — even when no real users are currently using it. 
+
+:brain: Synthetic transactions are fake or automated actions that simulate what a real person would do, like logging in, filling out a form, making a payment, or clicking a button.
+
+These "fake" actions are created by developers or security teams and run automatically at regular times, or from different locations, to see if the system responds correctly. The goal is to spot problems before real users notice them and before security risks appear.
+
+For example for an online banking website. A synthetic transaction could try to log in with a test account every five minutes. If the login page doesn’t load, or the response time is too slow, the monitoring system will send an alert so the technical team can check for issues — even if no customer has complained yet.
+
+Besides checking performance, synthetic transactions are useful for cybersecurity too. They can help detect if something has gone wrong in the system due to a security problem, like:
+
+- If a website has been defaced or hacked.
+- If a login process is no longer working due to an attack.
+- If a database is being blocked or slowed down by malicious traffic.
+- If a service is "pretending" to be healthy, but the backend is actually broken or under attack.
+
+By running synthetic transactions 24/7, an organization can notice unexpected changes in behavior that might be caused by security incidents. This helps reduce the time between when a problem happens and when it's detected (called Mean Time To Detect — MTTD).
+
+Synthetic transactions are also helpful for:
+
+- Baseline monitoring: knowing what "normal" looks like, so you can quickly spot abnormal activity.
+- Testing under safe conditions: without needing real customers to be involved.
+- Geographical coverage: you can run synthetic tests from different cities or countries to see if global users experience the same performance and security.
+
+**Real User Monitoring (RUM)** is a different but equally important technique. While synthetic transactions simulate fake users, RUM tracks real users as they interact with your website, system, or application in real time.
+
+Every time a real customer logs in, clicks, loads a page, or uses a service, RUM quietly collects data about their experience:
+
+- Was the page fast or slow to load?
+- Did any errors appear?
+- Which part of the world is the user connecting from?
+- What device or browser was the user using?
+
+RUM helps organizations understand how real people are experiencing their system — not just under test conditions, but in day-to-day use, under real-world traffic and situations. This is valuable for both security and performance.
+
+From a security perspective, RUM can:
+
+1. Show unusual patterns, such as a single user making thousands of requests in a short time.
+2. Detect suspicious activities like bots trying to scrape content or break into accounts.
+3. Track usage spikes that might be caused by a Distributed Denial of Service (DDoS) attack.
+4. Help identify whether errors are caused by user mistakes or possible security issues (such as broken authentication).
+
+From a performance perspective, RUM is useful to:
+
+- See if specific regions are experiencing slower service.
+- Understand the impact of software updates on the user experience.
+- Spot technical failures that only happen under real usage conditions.
+
+Both synthetic transactions and real user monitoring serve different purposes but work best when used together:
+| Feature / Aspect | Synthetic Transaction | RUM (Real User Monitoring) |
+|------------------|-----------------------|----------------------------|
+| Nature | Simulated, predictable tests | Real-world, live user data |
+| Data source | Scripted interactions (simulated users) | Actual user sessions and events |
+| Availability | Runs even when no users are online | Only runs when real users are active |
+| Primary value | Early warning, uptime and security baselining | True user experience, performance and behaviour insights |
+| Approach | Process-based, repeatable | Behaviour-based, uncontrolled/real-world |
+| Environment | Controlled environment | Uncontrolled, real-world behaviour |
+
+For example, a company could set up synthetic tests to alert the security team at night if the login service stops working — even if no user is active — while RUM could spot that a large number of users are having trouble logging in during business hours, perhaps because of an attack or bug.
+
+### Open Questions ###
+
+1. What is a synthetic transaction in cybersecurity testing?
+
+<details> <summary>Show answer</summary> A synthetic transaction is a fake or automated action designed to simulate what a real user would do, like logging in or clicking a button, to check if a system is working properly — even when no real users are using it. </details>
+
+2. Why do organizations use synthetic transactions?
+
+<details> <summary>Show answer</summary> Organizations use synthetic transactions to detect problems or security issues early, before real users notice, and to continuously test systems for availability, performance, and abnormal behavior. </details>
+
+3. Give an example of how synthetic transactions might be used for an online banking website.
+
+<details> <summary>Show answer</summary> A synthetic transaction could automatically log in with a test account every five minutes. If the login fails or is too slow, the system alerts the technical team, even if no real customer has complained yet. </details>
+
+4. Besides performance, what kind of issues can synthetic transactions help detect?
+
+<details> <summary>Show answer</summary> Synthetic transactions can help detect security problems like website defacement, broken login processes caused by attacks, database issues, and services pretending to be healthy when the backend is actually broken or compromised. </details>
+
+5. What is the benefit of running synthetic transactions 24/7?
+
+<details> <summary>Show answer</summary> Running synthetic transactions continuously helps reduce the time it takes to detect problems (Mean Time To Detect — MTTD) and ensures systems are monitored even outside business hours. </details>
+
+6. What is baseline monitoring, and how do synthetic transactions help with it?
+
+<details> <summary>Show answer</summary> Baseline monitoring means understanding what "normal" system behavior looks like. Synthetic transactions help establish this baseline, so it's easier to spot unusual or potentially harmful activity later on. </details>
+
+7. What does Real User Monitoring (RUM) do differently from synthetic transactions?
+
+<details> <summary>Show answer</summary> RUM tracks the behavior and experience of actual users in real-time, recording things like page load speed, errors, and geographic location, rather than running automated test actions. </details>
+
+8. How can RUM help detect potential security threats?
+
+<details> <summary>Show answer</summary> RUM can spot unusual patterns, like one user sending thousands of requests, detect bot activity, monitor DDoS attacks, and help identify whether errors are caused by users or possible security breaches. </details>
+
+9. Why is it useful to combine synthetic transactions with Real User Monitoring?
+
+<details> <summary>Show answer</summary> Using both provides the best coverage: synthetic transactions catch issues even when no users are online, while RUM reveals how real users experience the system during actual use — making it easier to detect both performance and security problems. </details>
+
+10. How do synthetic transactions and RUM complement each other in detecting login issues?
+
+<details> <summary>Show answer</summary> Synthetic transactions can detect if the login system breaks at night when no users are active, while RUM can highlight login troubles during the day when many real users encounter the same issue, helping security teams catch both types of problems. </details>
